<resources>
    <string name="app_name">miSAES</string>

    <!--  shared preferences keys   -->
    <string name="app_preferences_key">APP_PREFERENCES_KEY</string>
    <string name="app_login_status">APP_LOGIN_STATUS_KEY</string>
    <string name="app_scraper_instance">APP_SCRAPER_INSTANCE_KEY</string>
    <string name="login_school_preference">LOGIN_SCHOOL_PREFERENCE</string>
    <string name="login_user_preference">LOGIN_USER_PREFERENCE_KEY</string>
    <string name="login_password_preference">LOGIN_PASSWORD_PREFERENCE_KEY</string>
    <string name="login_rememberMe_preference">LOGIN_REMEMBER_ME_PREFERENCE_KEY</string>

    <string name="app_session_id_key">APP_SESSION_ID_KEY</string>

    <string name="common_no_data_contentDescription">No data</string>

    <string name="home_menu_logout">Cerrar sesión</string>

    <string name="login_title">Iniciar sesión en SAES</string>
    <string name="login_user_title">Usuario</string>
    <string name="login_password_title">Contraseña</string>
    <string name="login_password_toggle_description">Mostrar contraseña</string>
    <string name="login_btn_title">Inicia sesión</string>
    <string name="login_content_des_logo">Logo IPN</string>
    <string name="login_error_message">Hubo un error al iniciar sesión. Intenta más tarde.</string>
    <string name="login_user_key">pidae_user</string>
    <string name="login_password_key">pidae_password</string>
    <string name="login_captcha_contentDescription">Imagen captcha</string>
    <string name="login_captcha_title">Captcha</string>
    <string name="login_select_school_title">Selecciona tu escuela</string>
    <string name="login_level_title">Nivel</string>
    <string name="login_highschool_title">Medio Superior</string>
    <string name="login_university_title">Superior</string>
    <string name="login_school_title">Escuela</string>
    <string name="login_next_title">Siguiente</string>
    <string name="login_rememberMe_title">Recordar usuario y contraseña</string>
    <string name="login_user_contentDescription">Campo usuario</string>
    <string name="login_password_contentDescription">Campo contraseña</string>
    <string name="login_captchaInput_contentDescription">Campo captcha</string>


    <string name="kardex_title">Kardex</string>
    <string name="kardex_noData_title">No hay datos para mostrar</string>
    <string name="kardex_error">Error al obtener kardex</string>


    <string name="grades_title">Calificaciones</string>
    <string name="grades_first_title">1°:</string>
    <string name="grades_second_title">2°:</string>
    <string name="grades_third_title">3°:</string>
    <string name="grades_extra_title">Ext:</string>
    <string name="grades_error">Error al obtener calificaciones</string>


    <string name="schedule_title">Horario</string>
    <string name="schedule_error">Error al obtener horario</string>
    <string name="schedule_building_title">Edificio:</string>
    <string name="schedule_classroom_title">Salón:</string>
    <string name="schedule_monday_title">L</string>
    <string name="schedule_tuesday_title">Ma</string>
    <string name="schedule_wednesday_title">Mi</string>
    <string name="schedule_thursday_title">J</string>
    <string name="schedule_friday_title">V</string>


    <string name="me_title">Alumno</string>
    <string name="me_average_title">Promedio:</string>
    <string name="me_plan_title">Plan:</string>
    <string name="me_degree_title">Carrera:</string>
    <string name="me_studentId_title">Boleta:</string>
    <string name="me_student_title">Alumno:</string>
    <string name="me_error">Error al obtener información del alumno</string>
    <string name="me_fragment_tile">Alumno</string>

    <string name="refresh_success">Información actualizada correctamente</string>
    <string name="kardex_first_section">Primer Nivel</string>
    <string name="kardex_second_section">Segundo Nivel</string>
    <string name="kardex_third_section">Tercer Nivel</string>
    <string name="kardex_fourth_section">Cuarto Nivel</string>
    <string name="kardex_fifth_section">Quinto Nivel</string>
    <string name="kardex_sixth_section">Sexto Nivel</string>
    <string name="kardex_seventh_section">Séptimo Nivel</string>

</resources>
