<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph.xml"
    app:startDestination="@id/meFragment">

    <fragment
        android:id="@+id/meFragment"
        android:name="me.angelvc.misaes.me.MeFragment"
        android:label="@string/me_fragment_tile"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/gradesFragment"
        android:name="me.angelvc.misaes.grades.GradesFragment"
        android:label="@string/grades_title"
        tools:layout="@layout/fragment_grades" />
    <fragment
        android:id="@+id/kardexFragment"
        android:name="me.angelvc.misaes.kardex.KardexFragment"
        android:label="@string/kardex_title"
        tools:layout="@layout/fragment_kardex" />
    <fragment
        android:id="@+id/scheduleFragment"
        android:name="me.angelvc.misaes.schedule.ScheduleFragment"
        android:label="@string/schedule_title"
        tools:layout="@layout/fragment_schedule" />

</navigation>